; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlge/extr_qlge_mpi.c_ql_read_mpi_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlge/extr_qlge_mpi.c_ql_read_mpi_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ql_adapter = type { i32 }

@PROC_ADDR = common dso_local global i32 0, align 4
@PROC_ADDR_RDY = common dso_local global i32 0, align 4
@PROC_ADDR_ERR = common dso_local global i32 0, align 4
@PROC_ADDR_R = common dso_local global i32 0, align 4
@PROC_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ql_read_mpi_reg(%struct.ql_adapter* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.ql_adapter*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.ql_adapter* %0, %struct.ql_adapter** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load %struct.ql_adapter*, %struct.ql_adapter** %4, align 8
  %9 = load i32, i32* @PROC_ADDR, align 4
  %10 = load i32, i32* @PROC_ADDR_RDY, align 4
  %11 = load i32, i32* @PROC_ADDR_ERR, align 4
  %12 = call i32 @ql_wait_reg_rdy(%struct.ql_adapter* %8, i32 %9, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %36

16:                                               ; preds = %3
  %17 = load %struct.ql_adapter*, %struct.ql_adapter** %4, align 8
  %18 = load i32, i32* @PROC_ADDR, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @PROC_ADDR_R, align 4
  %21 = or i32 %19, %20
  %22 = call i32 @ql_write32(%struct.ql_adapter* %17, i32 %18, i32 %21)
  %23 = load %struct.ql_adapter*, %struct.ql_adapter** %4, align 8
  %24 = load i32, i32* @PROC_ADDR, align 4
  %25 = load i32, i32* @PROC_ADDR_RDY, align 4
  %26 = load i32, i32* @PROC_ADDR_ERR, align 4
  %27 = call i32 @ql_wait_reg_rdy(%struct.ql_adapter* %23, i32 %24, i32 %25, i32 %26)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %16
  br label %36

31:                                               ; preds = %16
  %32 = load %struct.ql_adapter*, %struct.ql_adapter** %4, align 8
  %33 = load i32, i32* @PROC_DATA, align 4
  %34 = call i32 @ql_read32(%struct.ql_adapter* %32, i32 %33)
  %35 = load i32*, i32** %6, align 8
  store i32 %34, i32* %35, align 4
  br label %36

36:                                               ; preds = %31, %30, %15
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @ql_wait_reg_rdy(%struct.ql_adapter*, i32, i32, i32) #1

declare dso_local i32 @ql_write32(%struct.ql_adapter*, i32, i32) #1

declare dso_local i32 @ql_read32(%struct.ql_adapter*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
